# developers-intuition.hs

./: .gitignore  ChangeLog.md  LICENSE  README.md  devs-intuit.cabal  shell.nix
nix/: devs-intuit.nix  nixpkgs.json  release.nix
nix/script/: regenerate.sh
src/Demo/: BST.hs  Coin.hs
tests/: BST.hs  Coin.hs  Main.hs
